# ndirust-py

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  MANIFEST.in  README.md  build_and_test.py  build_wheel.py  clean_repo.py  pyproject.toml  pythongreen.py  requirements.txt  setup.py  simple_receiver_test.py  test_bundled_dll.py  test_dll_load.py  test_ndi.py  test_ndi_receiver.py  test_ndi_sender.py
.github/workflows/: build.yml
examples/: ndi_finder_example.py  ndi_gui_preview.py  ndi_receiver_example.py  ndi_sender_example.py  simple_ndi_demo.py
ndi/ndi/: .cargo-checksum.json  Cargo.toml
src/: discovery.rs  lib.rs  receiver.rs  sender.rs  utils.rs
temp_extract/ndirust_py-0.1.0/ndirust_py/: __init__.py
temp_extract/ndirust_py-0.1.0/ndirust_py-0.1.0.dist-info/: METADATA  RECORD
test_extract/ndirust_py-0.1.0/ndirust_py/: __init__.py  __main__.py
test_extract/ndirust_py-0.1.0/ndirust_py-0.1.0.dist-info/: METADATA  RECORD
