[package]
name = "ndirust_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "ndirust_py"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
ndi = "0.1.2"
